Fix text overflow issue

--- a/assets/scripts/components/Main/Artist/ArtistVideo.pcss
+++ b/assets/scripts/components/Main/Artist/ArtistVideo.pcss
@@ -2,7 +2,7 @@
 @import '../../../../stylesheets/config/settings.pcss';
 
 .item {
-  width: 1%;
+  min-width: 0;
   flex: 0 0 calc(50% - 0.5rem);
   margin: 0 0 1rem;
 
@@ -31,11 +31,14 @@
   text-align: center;
   font-size: 0.75rem;
   font-weight: 700;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   margin-top: 0.5rem;
   line-height: 1;
+
+  & > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 .thumbnail {
